--- a/css/signUp-style.css
+++ b/css/signUp-style.css
@@ -3,3 +3,74 @@
 * @Date: 19/07/2022
 * @Project: E-Tech Computers
 * */
+
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+}
+
+.body-style{
+    link: #fff;
+    link: #ffffff;
+    width: 100%;
+    height: 100%;
+    background-image: url("../assets/cloud-computing-banner-background-smart-city.jpg");
+}
+
+/*.signup {
+    width: 390px;
+    height: 400px;
+    margin-top: 3%;
+    margin-bottom: 2%;
+    margin-left: 35%;
+    font-family: "Nunito Sans";
+    color: #fff;
+    text-align: center;
+    padding-top: 10%;
+    background-color: #fff;
+    border-radius: 25px;
+}
+
+.layer-style{
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 10%;
+    display: flex;
+    justify-content: space-between;
+    flex-basis: 32%;
+    transition: 0.5s;
+}
+
+.layer-style: hover{
+    box-shadow: 0 0 20px 0px rgba(7, 0, 0, 0.877);
+}
+
+.layer{
+    width: 450px;
+    height: 450px;
+    background-color: #fff;
+}*/
+
+.row{
+    width: 1300px;
+    height: 600px;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.layer-style{
+    flex-basis: 32%;
+    background-color: #fff;
+    border-radius: 10px;
+    margin-bottom: 2%;
+    margin-left: 30%;
+    box-sizing: border-box;
+    transition: 0.5s;
+}
+
+.layer-style:hover{
+    box-shadow: 0 0 20px 0px rgba(7, 0, 0, 0.877);
+}
