--- a/css/signUp-style.css
+++ b/css/signUp-style.css
@@ -13,48 +13,16 @@
 .body-style{
     link: #fff;
     link: #ffffff;
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    height: 50%;
     background-image: url("../assets/cloud-computing-banner-background-smart-city.jpg");
+    background-size: 100%;
 }
-
-/*.signup {
-    width: 390px;
-    height: 400px;
-    margin-top: 3%;
-    margin-bottom: 2%;
-    margin-left: 35%;
-    font-family: "Nunito Sans";
-    color: #fff;
-    text-align: center;
-    padding-top: 10%;
-    background-color: #fff;
-    border-radius: 25px;
-}
-
-.layer-style{
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-top: 10%;
-    display: flex;
-    justify-content: space-between;
-    flex-basis: 32%;
-    transition: 0.5s;
-}
-
-.layer-style: hover{
-    box-shadow: 0 0 20px 0px rgba(7, 0, 0, 0.877);
-}
-
-.layer{
-    width: 450px;
-    height: 450px;
-    background-color: #fff;
-}*/
 
 .row{
+    padding-top: 40px;
     width: 1300px;
-    height: 600px;
+    height: 740px;
     margin-top: 2%;
     margin-bottom: 2%;
     display: flex;
@@ -63,7 +31,7 @@
 
 .layer-style{
     flex-basis: 32%;
-    background-color: #fff;
+    background-color: #ffffff;
     border-radius: 10px;
     margin-bottom: 2%;
     margin-left: 30%;
@@ -73,4 +41,95 @@
 
 .layer-style:hover{
     box-shadow: 0 0 20px 0px rgba(7, 0, 0, 0.877);
+}
+
+h1{
+    color: #0441e0;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 600;
+}
+
+.input-box{
+    border-radius: 20px;
+    padding: 10px;
+    width: 90%;
+    margin-left: 10px;
+    margin-top: 2%;
+    font-size: 14px;
+    border: 2px solid #999;
+    outline: none;
+}
+
+p1 {
+    font-size: 12px;
+    text-align: center;
+    font-weight: 600;
+    margin-left: 15%;
+}
+
+
+.btnSignUp{
+    width: 70%;
+    height: 35px;
+    font-size: 20px;
+    border-radius: 15px;
+    border-color: #014a76;
+    background: #014a76;
+    border-width: 0px;
+    outline: none;
+    color: white;
+    margin-left: 60px;
+    cursor: pointer;
+}
+
+p2 {
+    margin-left: 10px;
+    font-weight: 600;
+}
+
+.icons{
+    top: 50%;
+    margin-left: 10px;
+}
+
+.icons ul li {
+    height: 40px;
+    width: 90px;
+    border-radius: 7px;
+    display: inline-block;
+    padding-left: 5px;
+    padding-top: 6px;
+    margin-top: 5px;
+    color: #fff;
+    background: #000;
+}
+
+p3 {
+    font-size: 16px;
+    text-align: center;
+    font-weight: 600;
+    margin-left: 15%;
+}
+
+.hr1{
+    width: 40%;
+    margin-left: 6%;
+}
+.hr2{
+    width: 40%;
+    margin: -22px 54%;
+}
+.or {
+    text-align: center;
+    font-weight: 600;
+    margin: 10px 0;
+    margin: -15px auto 10px;
+}
+.head-icon {
+    margin-left: 40%;
+    width: 80px;
+    margin-top: -50px;
+    border-width: 10px;
+    border-color: #fff;
 }
