--- a/css/main-style.css
+++ b/css/main-style.css
@@ -20,10 +20,16 @@ a{
     link: #ffffff;
     background-color: rgba(159, 149, 250, 0.815);
 }
+
+.back-vdo {
+    width: 100%;
+    min-height: 100vh;
+}
+
 .header{
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(166,167,167,0.5),rgba(166,167,167,0.5)), url("../assets/background3.webp");
+    background-image: linear-gradient(rgba(166,167,167,0.5),rgba(166,167,167,0.5));
     flex-basis: 32%;
     box-sizing: border-box;
     border-bottom-left-radius: 25px;
@@ -73,7 +79,7 @@ nav img{
 nav.sticky{
     position: fixed;
     width: 90%;
-    background: #051234;
+    background: #fc6868;
     top: 0;
     left: 0;
 }
@@ -87,14 +93,16 @@ nav.sticky{
     transform: translate(-50%, -50%);
     text-align: center;
 }
-.text-box h1{
-    color: rgb(14, 14, 48);
-    font-size: 62px;
+
+.topic {
+    color: #a8f6ec;
+    font-weight: 600;
 }
+
 .text-box p{
     margin: 10px 0 40px;
-    font-size: 14px;
-    color: rgb(7, 0, 0);
+    font-size: 16px;
+    color: rgb(255, 255, 255);
 }
 
 .hero-btn{
@@ -129,14 +137,14 @@ nav .fa{
     position: relative;
 }
 
-.text-box h1{
-    color: rgb(14, 14, 48);
+.about-topic {
+    color: rgb(0, 0, 0);
     font-size: 62px;
 }
-.text-box p{
+.about-us{
     margin: 10px 0 40px;
     font-size: 14px;
-    color: rgb(7, 0, 0);
+    color: rgb(255, 255, 255);
 }
 
 .computers{
@@ -407,6 +415,13 @@ contact-layer{
     transition: 0.5s;
 }
 
-
+.build {
+    color: #000da1;
+    font-size: 36px;
+    background-color: #eea5a5;
+    width: 100%;
+    border-radius: 10px;
+    margin-left: 75%;
+}
 
 
